Added project page

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,6 +2,7 @@
     <h1>{{pageTitle}}</h1>
     <p><a href="/">Home</a></p>
     <p><a href="/">About</a></p>
+    <p><a href="/projects">Projects</a></p>
 
 </header>
 
